﻿wersja 9.8.6 - 2021-12-20
- naprawiono odświeżanie tabeli EPG po zakończeniu nagrywania

wersja 9.8.5 - 2021-12-12
- dodane wsparcie dla plików .xz
- poprawione błędy

wersja 9.8.4 - 2021-12-07
- poprawka błędu przy dodawaniem kanału

wersja 9.8.3 - 2021-12-06
- poprawka archiwum dla serwisu Telia Play
- poprawione błędy

wersja 9.8.2 - 2021-11-28
- dodano wbudowaną przeglądarkę dodatków
- poprawione błędy

wersja 9.8.1 - 2021-11-16
- poprawki serwisów Polsat GO i Polsat GO Box

wersja 9.8.0 - 2021-11-12
- poprawki

wersja 9.7.9 - 2021-11-10
- poprawka cachowania playlist

wersja 9.7.8 - 2021-11-09
- aktualizacja parsowania EPG
- naprawiono błąd powiadomienia o pobieraniu
- poprawiono ogólne dopasowanie kanałów
- optymalizacje

wersja 9.7.7 - 2021-11-04
- zaktualizowano domyślny User-Agent
- zaktualizowano dopasowanie kanałów za pomocą wyrażeń regularnych
- dodano możliwość modyfikowania lokalnej mapy bazowej
- poprawione błędy

wersja 9.7.6 - 2021-11-03
- porawki

wersja 9.7.5 - 2021-11-02
- poprawione błędy

wersja 9.7.4 - 2021-11-01
- dodane ustawienie sortowania listy EPG
- poprawka tvg-id

wersja 9.7.3 - 2021-11-01
- aktualizacja map bazowych

wersja 9.7.2 - 2021-10-29
- aktualizacja tłumaczeń

wersja 9.7.1 - 2021-10-29
- aktualizacja map bazowych

wersja 9.7.0 - 2021-10-28
- naprawiono problemy z kodowaniem Python 2.7
- poprawione błędy

wersja 9.6.9 - 2021-10-27
- dodana opcja wymiany kodu krajowego
- poprawka cachowania playlist

wersja 9.6.8 - 2021-10-26
- naprawiono problemy z bazą Python 2.7

wersja 9.6.7 - 2021-10-25
- dodano nagłówki Content-Type do rozpoznawania typ plików EPG.

wersja 9.6.6 - 2021-10-25
- dodano ustawienie rejestrowania z wyprzedzeniem w bazie danych (WAL)
- ulepszone parsowanie kanałów
- poprawiona wydajność
- naprawiono przekierowanie strumienia playlisty odtwarzania

wersja 9.6.5 - 2021-10-19
- dodano moduł urllib3.
- przebudowany menu przy wybóru EPG i przerobione kategorie grup
- poprawiona wydajność

wersja 9.6.4 - 2021-10-10