@@ -178,6 +178,8 @@ class PolsatGoUpdater(baseServiceUpdater):
                 else:
                     myper = []
                     for i in data["result"]["accessGroups"]:
+                        if ':true' in i:
+                            myper.append(str(i))
                         if 'sc:' in i:
                             myper.append(str(i))
                         if 'oth:' in i:
