@@ -1,5 +1,6 @@
 ﻿wersja 9.8.6 - 2021-12-20
 - naprawiono odświeżanie tabeli EPG po zakończeniu nagrywania
+- naprawiono grupy dostępu Polsat GO
 
 wersja 9.8.5 - 2021-12-12
 - dodane wsparcie dla plików .xz
